# orga-tasker

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/src/: App.css  App.jsx
frontend/src/components/: AddDepartmentForm.jsx  AddTagForm.jsx  AddTicketForm.jsx  Board.jsx  Breadcrumb.jsx  CalendarView.jsx  Column.jsx  DeptMultiSelect.jsx  Header.jsx  RoadmapView.jsx  Swimlane.jsx  SwimlaneSelector.jsx  TagMultiSelect.jsx  Ticket.jsx  TicketPanel.jsx
